fix align title

--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,11 @@ footer {
     background-color: #333333;
 }
 
+.contact h2 {
+    text-align: center;
+    font-size: 30px;
+}
+
 form {
     width: 300px;
     max-width: 100%;
